--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "bacon/bacon-qr-code": "^3.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "paypal/paypal-checkout-sdk": "^1.0",
